# simplepush.hs

./: .travis.yml  README.md  TAGS  simplepush.cabal  stack.yaml
src/: Main.hs
