name:                simplepush
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/ga2arch/simplepush#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriele Carrettoni
maintainer:          gabriele.carrettoni@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable simplepush
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       async >= 2.0.2
                     , base >= 4.7 && < 5
                     , blaze-builder >= 0.4.0.1
                     , bytestring >= 0.10.6.0
                     , hslogger >= 1.2.9
                     , http-types >= 0.8.6
                     , network >= 2.6.2.1
                     , scotty >= 0.10.2
                     , transformers >= 0.4.2.0
                     , unordered-containers >= 0.2.5.1

